--- a/RxBasics/Podfile
+++ b/RxBasics/Podfile
@@ -1,11 +1,11 @@
 # Uncomment the next line to define a global platform for your project
 platform :ios, '12.1'
 
-target 'RxBasic' do
+target 'RxBasics' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for RxBasic
+  # Pods for RxBasics
   pod 'SwiftLint'
   pod 'RxSwift'
 
